[package]
name = "rust_ray_tracing"
version = "0.1.0"
authors = ["Francesco Giordana <fgiordana@netflix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
image = "0.23.12"
num = "0.3.1"
rand = "0.8.2"
rayon = "1.5.0"
itertools = "0.10.0"
minifb = "0.19.1"
prisma = "0.1.1"
